Example queries for article

--- a/NC_log_DuckDB.ipynb
+++ b/NC_log_DuckDB.ipynb
@@ -30,18 +30,18 @@
    },
    "outputs": [],
    "source": [
-    "# valid_entries = []\n",
-    "# with open(\"nextcloud.log.json\", \"r\", encoding=\"utf-8\") as f:\n",
-    "#     for line in f:\n",
-    "#         try:\n",
-    "#             # Process each line as a JSON object\n",
-    "#             valid_entries.append(json.loads(line))  \n",
-    "#         except json.JSONDecodeError:\n",
-    "#             print(\"Skipping malformed line\")\n",
+    "valid_entries = []\n",
+    "with open(\"nextcloud.log.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    for line in f:\n",
+    "        try:\n",
+    "            # Process each line as a JSON object\n",
+    "            valid_entries.append(json.loads(line))  \n",
+    "        except json.JSONDecodeError:\n",
+    "            print(\"Skipping malformed line\")\n",
     "\n",
-    "# # Save the repaired JSON\n",
-    "# with open(\"fixed_nextcloud.log.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "#     json.dump(valid_entries, f, separators=(',', ':'))"
+    "# Save the repaired JSON\n",
+    "with open(\"fixed_nextcloud.log.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(valid_entries, f, separators=(',', ':'))"
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "2322dec8-794d-42ee-b129-9746a4fd6c04",
    "metadata": {
     "tags": []
@@ -68,35 +68,33 @@
       "│ remoteAddr_inet │ count │\n",
       "│      inet       │ int64 │\n",
       "├─────────────────┼───────┤\n",
-      "│ 156.38.245.18   │  7102 │\n",
-      "│ 103.121.39.54   │  1323 │\n",
-      "│ 3.236.57.159    │  1312 │\n",
-      "│ 185.231.154.40  │   760 │\n",
-      "│ 185.134.23.83   │   229 │\n",
-      "│ 199.127.60.228  │   148 │\n",
-      "│ 141.98.11.107   │   136 │\n",
-      "│ 78.153.140.179  │    90 │\n",
-      "│ 148.153.45.234  │    83 │\n",
-      "│ 45.149.241.33   │    70 │\n",
-      "│       ·         │     · │\n",
-      "│       ·         │     · │\n",
-      "│       ·         │     · │\n",
-      "│ 64.62.197.241   │     1 │\n",
-      "│ 64.62.197.161   │     1 │\n",
-      "│ 65.49.1.63      │     1 │\n",
-      "│ 123.160.221.133 │     1 │\n",
-      "│ 64.62.197.203   │     1 │\n",
-      "│ 134.209.126.46  │     1 │\n",
-      "│ 204.48.23.174   │     1 │\n",
-      "│ 107.150.117.103 │     1 │\n",
-      "│ 35.92.177.40    │     1 │\n",
-      "│ 44.234.45.97    │     1 │\n",
+      "│ 199.195.250.80  │    29 │\n",
+      "│ 83.147.52.42    │     4 │\n",
+      "│ 87.120.115.119  │     2 │\n",
+      "│ 179.43.143.42   │     2 │\n",
+      "│ 78.153.140.177  │     2 │\n",
+      "│ 78.153.140.179  │     2 │\n",
+      "│ 178.215.236.132 │     1 │\n",
+      "│ 88.214.26.9     │     1 │\n",
+      "│ 54.144.96.170   │     1 │\n",
+      "│ 3.215.185.65    │     1 │\n",
+      "│ 104.140.148.46  │     1 │\n",
+      "│ 87.251.66.220   │     1 │\n",
+      "│ 78.153.140.151  │     1 │\n",
+      "│ 18.212.3.249    │     1 │\n",
+      "│ 194.37.80.250   │     1 │\n",
+      "│ 3.82.53.117     │     1 │\n",
+      "│ 87.120.115.34   │     1 │\n",
+      "│ 94.156.64.214   │     1 │\n",
+      "│ 76.8.60.182     │     1 │\n",
+      "│ 174.138.62.1    │     1 │\n",
+      "│ 207.241.235.133 │     1 │\n",
       "├─────────────────┴───────┤\n",
-      "│  1073 rows (20 shown)   │\n",
+      "│ 21 rows       2 columns │\n",
       "└─────────────────────────┘\n",
       "\n",
-      "CPU times: user 4.99 s, sys: 460 ms, total: 5.45 s\n",
-      "Wall time: 5.36 s\n"
+      "CPU times: user 4.94 s, sys: 486 ms, total: 5.43 s\n",
+      "Wall time: 5.42 s\n"
      ]
     }
    ],
@@ -116,12 +114,53 @@
     "                        SELECT CAST(remoteAddr AS INET) AS remoteAddr_inet,\n",
     "                        COUNT(*) AS count\n",
     "                        FROM domain_errors\n",
-    "                        WHERE userAgent LIKE '%Macintosh%'\n",
+    "                        WHERE userAgent LIKE '%bot%'\n",
     "                        GROUP BY remoteAddr\n",
     "                        ORDER BY count DESC\n",
     "                             \"\"\")\n",
     "\n",
     "print(gby_user_agent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "06552332-3cd6-438c-81fb-f832305b8d30",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# domain_errors = duckdb.sql(\"\"\"\n",
+    "#                        SELECT time, remoteAddr, userAgent\n",
+    "#                        FROM json_input\n",
+    "#                        WHERE message LIKE '%Trusted domain error%'\n",
+    "#                        AND userAgent LIKE '%bot%'\n",
+    "#                        --- LIMIT 10\n",
+    "#                            \"\"\")\n",
+    "\n",
+    "# print(domain_errors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6a6b1d4f-cc6d-4f01-8528-f521c92aa47e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# login_errors = duckdb.sql(\"\"\"\n",
+    "#                        SELECT time, remoteAddr, message, \n",
+    "#                        FROM json_input\n",
+    "#                        WHERE message LIKE '%Login failed%'\n",
+    "#                        AND message NOT LIKE '%vnegi10%'\n",
+    "#                        AND message NOT LIKE '%mdash%'\n",
+    "#                        --- LIMIT 10\n",
+    "#                            \"\"\")\n",
+    "\n",
+    "# print(login_errors)"
    ]
   },
   {
@@ -136,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "id": "d609a596-4cef-45f5-862e-e14453618407",
    "metadata": {
     "tags": []
@@ -146,39 +185,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "┌─────────────────┬───────┬─────────┬───────────────────────┬───────────────────────────────┐\n",
-      "│ remoteAddr_inet │ count │ country │       stateprov       │             city              │\n",
-      "│      inet       │ int64 │ varchar │        varchar        │            varchar            │\n",
-      "├─────────────────┼───────┼─────────┼───────────────────────┼───────────────────────────────┤\n",
-      "│ 156.38.245.18   │  7102 │ ZA      │ Gauteng               │ Johannesburg                  │\n",
-      "│ 103.121.39.54   │  1323 │ BD      │ Chittagong            │ Chittagong (Chawk Bazar)      │\n",
-      "│ 3.236.57.159    │  1312 │ US      │ Virginia              │ Ashburn                       │\n",
-      "│ 185.231.154.40  │   760 │ RU      │ Moscow                │ Moscow                        │\n",
-      "│ 185.134.23.83   │   229 │ GB      │ England               │ London                        │\n",
-      "│ 141.98.11.107   │   136 │ LT      │ Kaunas                │ Kaunas                        │\n",
-      "│ 78.153.140.179  │    90 │ GB      │ England               │ London                        │\n",
-      "│ 148.153.45.234  │    83 │ US      │ California            │ Los Angeles                   │\n",
-      "│ 123.125.21.148  │    62 │ CN      │ Beijing               │ Jinrongjie (Xicheng District) │\n",
-      "│ 183.136.225.32  │    59 │ CN      │ Zhejiang              │ Hangzhou                      │\n",
-      "│      ·          │     · │ ·       │    ·                  │    ·                          │\n",
-      "│      ·          │     · │ ·       │    ·                  │    ·                          │\n",
-      "│      ·          │     · │ ·       │    ·                  │    ·                          │\n",
-      "│ 23.239.9.40     │     1 │ US      │ New Jersey            │ Hanover (Cedar Knolls)        │\n",
-      "│ 64.62.197.5     │     1 │ US      │ California            │ Fremont (East Industrial)     │\n",
-      "│ 77.221.151.35   │     1 │ RU      │ Moscow                │ Moscow                        │\n",
-      "│ 138.68.231.161  │     1 │ US      │ California            │ Santa Clara                   │\n",
-      "│ 64.62.197.6     │     1 │ US      │ California            │ Fremont (East Industrial)     │\n",
-      "│ 64.62.156.43    │     1 │ US      │ California            │ Fremont (East Industrial)     │\n",
-      "│ 64.62.156.14    │     1 │ US      │ California            │ Fremont (East Industrial)     │\n",
-      "│ 87.120.125.126  │     1 │ NL      │ North Holland         │ Amsterdam                     │\n",
-      "│ 85.239.33.117   │     1 │ MD      │ Chișinău Municipality │ Chisinau                      │\n",
-      "│ 85.209.11.108   │     1 │ KG      │ Bishkek               │ Bishkek                       │\n",
-      "├─────────────────┴───────┴─────────┴───────────────────────┴───────────────────────────────┤\n",
-      "│ 962 rows (20 shown)                                                             5 columns │\n",
-      "└───────────────────────────────────────────────────────────────────────────────────────────┘\n",
+      "┌─────────────────┬───────┬─────────┬──────────────────┬──────────────────────────────┐\n",
+      "│ remoteAddr_inet │ count │ country │    stateprov     │             city             │\n",
+      "│      inet       │ int64 │ varchar │     varchar      │           varchar            │\n",
+      "├─────────────────┼───────┼─────────┼──────────────────┼──────────────────────────────┤\n",
+      "│ 115.159.220.67  │  1610 │ CN      │ Shanghai         │ Shanghai                     │\n",
+      "│ 91.250.240.220  │   166 │ PT      │ Lisbon           │ Lisbon                       │\n",
+      "│ 20.163.106.32   │   148 │ US      │ Arizona          │ Phoenix                      │\n",
+      "│ 94.102.61.7     │   116 │ NL      │ North Holland    │ Amsterdam                    │\n",
+      "│ 185.242.226.109 │    67 │ NL      │ North Holland    │ Amsterdam                    │\n",
+      "│ 185.242.226.88  │    54 │ NL      │ North Holland    │ Amsterdam                    │\n",
+      "│ 130.211.54.158  │    38 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 34.140.248.32   │    38 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 34.77.127.183   │    37 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 104.199.31.214  │    36 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│      ·          │     · │ ·       │       ·          │    ·                         │\n",
+      "│      ·          │     · │ ·       │       ·          │    ·                         │\n",
+      "│      ·          │     · │ ·       │       ·          │    ·                         │\n",
+      "│ 185.15.62.7     │     1 │ RU      │ Krasnodar Krai   │ Vysokoye                     │\n",
+      "│ 80.66.83.180    │     1 │ RU      │ Moscow           │ Moscow                       │\n",
+      "│ 80.94.95.248    │     1 │ BG      │ Sofia-grad       │ Sofia                        │\n",
+      "│ 82.203.72.3     │     1 │ GB      │ England          │ London (City of Westminster) │\n",
+      "│ 178.128.64.157  │     1 │ US      │ California       │ Santa Clara                  │\n",
+      "│ 34.140.159.131  │     1 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 34.140.124.166  │     1 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 34.140.65.158   │     1 │ BE      │ Brussels Capital │ Brussels                     │\n",
+      "│ 94.102.61.8     │     1 │ NL      │ North Holland    │ Amsterdam                    │\n",
+      "│ 94.102.57.152   │     1 │ NL      │ North Holland    │ Amsterdam                    │\n",
+      "├─────────────────┴───────┴─────────┴──────────────────┴──────────────────────────────┤\n",
+      "│ 285 rows (20 shown)                                                       5 columns │\n",
+      "└─────────────────────────────────────────────────────────────────────────────────────┘\n",
       "\n",
-      "CPU times: user 41.6 s, sys: 6.31 s, total: 47.9 s\n",
-      "Wall time: 6.1 s\n"
+      "CPU times: user 26 s, sys: 5.78 s, total: 31.8 s\n",
+      "Wall time: 5.26 s\n"
      ]
     }
    ],
@@ -230,16 +269,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e09c2fc8-bb92-46c1-b439-684c37abfd8f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Read ASN database and join to group"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "a5fd37c1-3260-45b5-997b-13cef1e24074",
+   "execution_count": null,
+   "id": "8e03f1f3-3f46-4409-bcbd-fc6fb4e2bbcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbd11802-c543-48a5-aabd-876d4bd3c0ee",
+   "metadata": {},
+   "source": [
+    "### Performance - Full query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ef263dce-ebea-4896-8f15-59acbf074f9f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#print(ipv4_city_subset)"
+    "# %%time\n",
+    "\n",
+    "# json_input = duckdb.read_json(\"fixed_nextcloud.log.json\")\n",
+    "\n",
+    "# domain_errors = duckdb.sql(\"\"\"\n",
+    "#                        SELECT *\n",
+    "#                        FROM json_input\n",
+    "#                        WHERE message LIKE '%Trusted domain error%'\n",
+    "#                        -- LIMIT 10\n",
+    "#                            \"\"\")\n",
+    "\n",
+    "# gby_user_agent = duckdb.sql(\"\"\"\n",
+    "#                         SELECT CAST(remoteAddr AS INET) AS remoteAddr_inet,\n",
+    "#                         COUNT(*) AS count\n",
+    "#                         FROM domain_errors\n",
+    "#                         WHERE userAgent LIKE '%Mozilla%'\n",
+    "#                         GROUP BY remoteAddr\n",
+    "#                         ORDER BY count DESC\n",
+    "#                              \"\"\")\n",
+    "\n",
+    "# ipv4_city = duckdb.sql(\"\"\"\n",
+    "#                 SELECT * \n",
+    "#                 FROM read_csv('dbip-city-lite-2025-02.csv',\n",
+    "#                                columns = {\n",
+    "#                                'ip_start': 'VARCHAR(15)',\n",
+    "#                                'ip_end': 'VARCHAR(15)', \n",
+    "#                                'continent': 'VARCHAR(2)',\n",
+    "#                                'country': 'VARCHAR(2)',\n",
+    "#                                'stateprov': 'TEXT',\n",
+    "#                                'city': 'TEXT',\n",
+    "#                                'latitude': 'FLOAT',\n",
+    "#                                'longitude': 'FLOAT'\n",
+    "#                                }, \n",
+    "#                                header = False,\n",
+    "#                                ignore_errors = true)\n",
+    "#                 WHERE ip_start LIKE '%.%'\n",
+    "#                       \"\"\")\n",
+    "\n",
+    "# ipv4_city_subset = duckdb.sql(\"\"\"\n",
+    "#                         SELECT CAST(ip_start as INET) AS ip_start_inet, \n",
+    "#                                CAST(ip_end as INET) AS ip_end_inet,\n",
+    "#                                country,\n",
+    "#                                stateprov,\n",
+    "#                                city\n",
+    "#                         FROM ipv4_city\n",
+    "#                         -- LIMIT 10\n",
+    "#                             \"\"\")\n",
+    "\n",
+    "# gby_user_agent_city_join = duckdb.sql(\"\"\"\n",
+    "#                                 SELECT gua.remoteAddr_inet,\n",
+    "#                                        gua.count,\n",
+    "#                                        ics.country,\n",
+    "#                                        ics.stateprov,\n",
+    "#                                        ics.city\n",
+    "#                                 FROM gby_user_agent gua\n",
+    "#                                 JOIN ipv4_city_subset ics\n",
+    "#                                 ON gua.remoteAddr_inet\n",
+    "#                                 BETWEEN ics.ip_start_inet AND ics.ip_end_inet\n",
+    "#                                 ORDER BY count DESC\n",
+    "#                                 \"\"\")\n",
+    "\n",
+    "# print(gby_user_agent_city_join)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ee2be0e-d029-4936-ad95-028bb574adb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
